fixing about on mobile

--- a/about.css
+++ b/about.css
@@ -1,4 +1,8 @@
 /*MY IMAGE SECTION*/
+/*bootstrap*/
+html{
+overflow-x: hidden;
+}
 
 #header{
   /*z-index: 2;*/
@@ -212,4 +216,9 @@ font-weight: normal;
 
 .software{
   width: 30px;
+}
+
+/*bootstrap fix*/
+.row{
+  margin:0;
 }
